--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-  implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
+  implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
 
   implementation project(':skylight-backport')
   implementation project(':sso-backport')
@@ -49,10 +49,10 @@ dependencies {
   implementation 'androidx.core:core-ktx:1.0.2'
   implementation 'androidx.fragment:fragment-ktx:1.0.0'
   implementation 'androidx.appcompat:appcompat:1.0.2'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
 
-  implementation project(':views')
-  implementation 'com.google.android.material:material:1.1.0-alpha06'
+  implementation 'drewhamilton.skylight.android:skylight-views:0.10.0'
+  implementation 'com.google.android.material:material:1.1.0-alpha07'
 
   implementation 'drewhamilton.rxpreferences:rxpreferences:1.0.0-beta2'
   implementation 'drewhamilton.rxpreferences:rxpreferences-ktx:1.0.0-beta2'
@@ -61,7 +61,7 @@ dependencies {
   implementation "com.google.dagger:dagger:$daggerVersion"
   kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
-  implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
   implementation 'androidx.multidex:multidex:2.0.1'
 
   testImplementation 'junit:junit:4.12'
