--- a/rx-backport/build.gradle
+++ b/rx-backport/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
+ext.artifact = 'skylight-backport-rx'
 apply from: 'publish.gradle'
 
 dependencies {
