--- a/skylight/build.gradle
+++ b/skylight/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
+ext.artifact = 'skylight'
 apply from: 'publish.gradle'
 
 dependencies {
