--- a/sso-backport/build.gradle
+++ b/sso-backport/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
+ext.artifact = 'skylight-backport-sso'
 apply from: 'publish.gradle'
 
 sourceSets.main.java.srcDirs += '../sso-common/src/main/java'
