--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
   ext.kotlin_version = '1.3.31'
   repositories {
     google()
+    gradlePluginPortal()
     jcenter()
   }
   dependencies {
@@ -9,6 +10,8 @@ buildscript {
 
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.18"
+
+    classpath 'me.champeau.gradle:japicmp-gradle-plugin:0.2.8'
 
     classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
@@ -28,6 +31,8 @@ task clean(type: Delete) {
 
 ext {
   libraryVersion = '0.9.0'
+  compatibleVersion = '0.8.3'
+  failIfIncompatible = false
 
   rxJavaVersion = '2.2.8'
   daggerVersion = '2.22.1'
