--- a/rx/build.gradle
+++ b/rx/build.gradle
@@ -19,3 +19,42 @@ dependencies {
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
+
+// TODO WORKAROUND: Get this to work in its own file
+//region Compatibility
+configurations {
+  baseline
+  latest
+}
+
+dependencies {
+  baseline("$publishedGroupId:$artifact:$compatibleVersion") {
+    transitive false
+    force true
+  }
+  latest project(path: ":$project.name")
+}
+
+apply plugin: 'me.champeau.gradle.japicmp'
+//noinspection UnnecessaryQualifiedReference
+task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask) {
+  oldClasspath = configurations.baseline.incoming.artifactView { config ->
+    config.attributes { container ->
+      container.attribute(Attribute.of("artifactType", String.class), "jar")
+    }
+  }.artifacts.artifactFiles
+
+  newClasspath = configurations.latest.incoming.artifactView { config ->
+    config.attributes { container ->
+      container.attribute(Attribute.of("artifactType", String.class), "jar")
+    }
+  }.artifacts.artifactFiles
+
+  onlyBinaryIncompatibleModified true
+  failOnModification failIfIncompatible
+  txtOutputFile = file("$buildDir/reports/japi.txt")
+}
+
+check.dependsOn(japicmp)
+build.dependsOn(check)
+//endregion
