--- a/calculator-backport/build.gradle
+++ b/calculator-backport/build.gradle
@@ -16,6 +16,7 @@ dependencies {
   kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
   testImplementation 'junit:junit:4.12'
+  testImplementation 'org.threeten:threetenbp:1.4.0'
 }
 
 sourceCompatibility = "1.8"
