--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ task clean(type: Delete) {
 ext {
   libraryVersion = '0.9.2'
   compatibleVersion = '0.9.1'
-  failIfIncompatible = true
+  failIfIncompatible = false
 
   rxJavaVersion = '2.2.8'
   daggerVersion = '2.22.1'
